<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bj"
    android:orientation="vertical" >
	<ImageView
        android:id="@+id/logo_image" 
        android:layout_width="1280dip" 
        android:layout_height="200dip" 
        android:layout_centerHorizontal="true" 
        
        android:src="@drawable/logohaiyi" 
        > 
    </ImageView> 
    <RelativeLayout
        android:layout_width="640dip"
        android:layout_height="fill_parent"
        android:layout_below="@id/logo_image"
        
        android:id="@+id/login_field"
        android:background="@drawable/you2" >

        <LinearLayout
            android:id="@+id/tabcon"
            style="@style/TabContainer" >

            <LinearLayout
                android:id="@+id/tab1"
                android:layout_width="fill_parent"
                style="@style/TabUnselected"
                 >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="@style/TabTxt"
                    android:text=""
                    android:textSize="25px" />
            </LinearLayout>
            

                
            <LinearLayout
                android:id="@+id/tab2"
                android:layout_width="fill_parent"
                style="@style/TabSelected"
                 >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="@style/TabTxt"
                    android:text=""
                    android:textSize="25px" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/login_div"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tabcon"
            android:layout_margin="10dip"
            android:paddingBottom="15dip" >

            <TextView
                android:id="@+id/login_user_input1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="18dip"
                android:text="@string/login_label_username"
                android:textSize="20px"
                android:textColor="#AAAAAA"
                 />

            <EditText
                android:id="@+id/username_edit2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="40dp"
                android:singleLine="true"
                android:textColor="#AAAAAA"
                android:textColorHint="#AAAAAA"  
                android:background="#00000000"
                android:layout_toRightOf="@id/login_user_input1"
                android:hint="@string/login_username_hint" />
<LinearLayout
android:layout_width="0dip"
android:layout_height="0dip"
android:focusable="true"
android:focusableInTouchMode="true" />
            <EditText
                android:id="@+id/password_edit2"
               
                android:password="true"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textColorHint="#AAAAAA"  
    			  
                android:background="@drawable/bg_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/username_edit2"
                android:layout_alignRight="@id/username_edit2"
                android:layout_below="@id/username_edit2"
                android:layout_marginTop="24dp"
                android:hint="@string/login_password_hint" />

            <TextView
                android:id="@+id/login_password_input1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/password_edit2"
                android:layout_below="@id/login_user_input1"
                android:layout_marginTop="2dip"
                android:text="@string/login_label_password"
                android:textSize="20px"
                android:textColor="#AAAAAA"
                 />

            <TextView
                android:id="@+id/login_server_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password_input1"
                
                android:layout_marginTop="35dip"
                android:text="@string/login_label_serverselect"
                android:textSize="20px"
                android:textColor="#AAAAAA"
                 />

            <Spinner
                android:id="@+id/Spinner02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/username_edit2"
                android:layout_alignRight="@id/username_edit2"
                android:layout_below="@id/password_edit2"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="12dp"
                android:background="@drawable/bg_edittext" >
            </Spinner>
			
            <TextView 
                android:id="@+id/password_error2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Spinner02"
                android:layout_alignLeft="@id/Spinner02"
                android:layout_marginTop="24dip"
                android:text=""
                android:textSize="20px"
                android:textColor="#AAAAAA"/>
         
             
   
    		<Button 
    			android:id="@+id/button_login2"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    	android:layout_below="@id/password_error2"
                android:layout_margin="15dip"
                android:layout_alignRight="@id/Spinner02"
    	 		
    			android:text="登录"
    			android:background="@drawable/blue_buttonnn"
   	 		/>
           
            <Button
                android:id="@+id/button_comunicate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dip"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/comuni"
                android:text="" />
            <Button
                android:id="@+id/button_modifypass2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dip"
                android:layout_toRightOf="@id/button_comunicate2"
                android:layout_alignParentBottom="true"
                android:background="@drawable/modifypa"
                android:text="" />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="640dip"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/login_field"
        android:layout_alignTop="@id/login_field"
        android:id="@+id/login_f"
        android:background="@drawable/right" >
		
    </RelativeLayout>
     

</RelativeLayout>